# lg-alarm-base

./: .gitignore  CMakeLists.txt  main.cpp  toolchain.cmake
executables/acqhnd/: CMakeLists.txt  acqhnd.cpp
executables/alarmhnd/: CMakeLists.txt  alarmhnd.cpp
executables/networkhnd/: CMakeLists.txt  networkhnd.cpp
executables/notifierhnd/: CMakeLists.txt  notifierhnd.cpp
libraries/: CMakeLists.txt
libraries/coreLib/: CMakeLists.txt
libraries/coreLib/coreUtils/: Time.cpp  Time.h
libraries/coreLib/executor/: EventLoop.cpp  EventLoop.h  Task.cpp  Task.h
libraries/coreLib/executor/utils/: EventTime.cpp  EventTime.h
libraries/coreLib/ipc/: IPC.cpp  IPC.h
libraries/ipc/ipczmq/: CMakeLists.txt  IPCZmq.cpp  IPCZmq.h
libraries/libhw/: CMakeLists.txt  LibHw.cpp  LibHw.h  Spi.cpp  Spi.h
sys/: environment-setup-rpi3  environment-setup-rpi5
